--- a/express/package.json
+++ b/express/package.json
@@ -17,5 +17,8 @@
     "eslint-plugin-import": "^2.25.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0"
   }
 }
