--- a/express/package.json
+++ b/express/package.json
@@ -19,6 +19,10 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^10.0.0",
+    "mongoose": "^6.0.15"
   }
 }
