--- a/express/package.json
+++ b/express/package.json
@@ -21,9 +21,12 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
+    "@types/validator": "^13.7.0",
     "connect-mongo": "^4.6.0",
+    "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^6.0.15"
+    "mongoose": "^6.0.15",
+    "validator": "^13.7.0"
   }
 }
