--- a/front_todo/package.json
+++ b/front_todo/package.json
@@ -44,9 +44,6 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
-    "babel-eslint": "^10.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.0"
+    "babel-eslint": "^10.1.0"
   }
 }
