--- a/api_todo/package.json
+++ b/api_todo/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.13",
     "@types/validator": "^13.7.0",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
     "express-async-errors": "^3.1.1",
