--- a/front_todo/package.json
+++ b/front_todo/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "start": "^5.1.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -46,7 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.9",
     "babel-eslint": "^10.1.0"
   }
